p2/confs/k3s/app2/app2.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service

spec:
  ports:
    - name: http
      port: 80
  selector:
    app: app2
